# ComfyUI-HunyuanX

./: .gitignore  .gitmodules  INSTALLATION.md  LICENSE  PLAN.md  README.md  TESTING_SETUP.md  __init__.py  andrea_nodes.py  blender_render_script.py  compile_extensions.sh  hunyuan_nodes.py  install.py  model_cache.py  nodes.py  prestartup_script.py  pyproject.toml  pytest.ini  rendering_nodes.py  requirements-dev.txt  requirements.txt  run_tests.sh  trellis_nodes.py
.github/workflows/: gpu-test.yml  mirror.yml  test.yml
.ipynb_checkpoints/: nodes-checkpoint.py
configs/: dit_config_2_1.yaml
docs/: INSTALLATION.md  INTERPOLATION_USAGE.md  README_HUNYUAN.md  TRELLIS_QUICKSTART.md
hy3dpaint/: textureGenPipeline.py
hy3dpaint/DifferentiableRenderer/: MeshRender.py
hy3dpaint/custom_rasterizer/custom_rasterizer.egg-info/: SOURCES.txt
hy3dpaint/hunyuanpaintpbr/: pipeline.py
hy3dpaint/utils/: multiview_utils.py
hy3dshape/hy3dshape/: pipelines.py
lib/hy3dpaint/DifferentiableRenderer/: mesh_inpaint_processor
lib/trellis/pipelines/: base.py  trellis_image_to_3d.py  trellis_text_to_3d.py
nodes/: __init__.py  andrea_nodes.py  geom_operations_individual.py  geom_operations_node.py  hunyuan_nodes.py  interpolation_nodes.py  mesh_nodes.py  rendering_nodes.py  trellis_nodes.py
nodes/lib/hunyuan_configs/: dit_config_2_1.yaml
nodes/lib/hy3dpaint/: textureGenPipeline.py
nodes/lib/hy3dpaint/DifferentiableRenderer/: MeshRender.py
nodes/lib/hy3dpaint/custom_rasterizer/: pyproject.toml  setup.py
nodes/lib/hy3dpaint/hunyuanpaintpbr/unet/: modules.py
nodes/lib/hy3dpaint/utils/: multiview_utils.py  uvwrap_utils.py
nodes/lib/hy3dshape/hy3dshape/: pipelines.py  postprocessors.py
nodes/lib/trellis/: __init__.py
nodes/lib/trellis/datasets/: sparse_structure_latent.py  structured_latent.py
nodes/lib/trellis/modules/sparse/attention/: full_attn.py
nodes/lib/trellis/modules/sparse/conv/: conv_spconv.py
nodes/lib/trellis/pipelines/: base.py
nodes/nodeutils/: trellis_utils.py
playground/: Explore_example_trainset.ipynb
scripts/: install.py
tests/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  conftest.py  generate_config.py  pytest.ini  render_utils.py  test_basic_nodes.py  test_fixtures.py  test_geom_operations.py  test_hunyuan_rendering.py  test_render_osmesa.py  test_sphere.glb  test_workflows.py
tests/configs/: ci.yaml  default.yaml  quick.yaml
tests/output/: latest
tests/testutils/: workflow_converter.py
tests/torun/: conftest.py  pytest.ini  test_workflows.py
tests/torun/testutils/: attention_configs.py  config_loader.py
tests/utils/: __init__.py  performance_tracker.py  workflow_converter.py
trellis/: __init__.py
web/js/: preview_trimesh.js
workflows/: complete.json  hunyuan-i2m.json  image-to-texture-mesh-api-proper-flux.json  image-to-texture-mesh-api-proper.json  image-to-texture-mesh-api-withflux.json  image-to-texture-mesh-api.json  image_to_textured_mesh.json  qwen.json  trellis-i2m.json  trellis-slat-visualizer.json  trellis-t2m.json
